--- a/early_exit/config/protbert/protein_loc_test.yaml
+++ b/early_exit/config/protbert/protein_loc_test.yaml
@@ -15,11 +15,11 @@ dataset:
         view: "residue"
 
 task:
-  class: EarlyExitProperty_continuous
+  class: EarlyExitProperty_continuous_protbert
   model:
-    class: CustomESM2
+    class: CustomProtBert
     # path: {{ modeldir }}
-    model: "CustomESM2"
+    model: "CustomProtBert"
   metric: 'acc'
   verbose: 1
   num_mlp_layer: 2
@@ -39,14 +39,14 @@ engine:
   batch_size: 8
   log_interval: 1000
 
-eval_metric: 'acc'
+eval_metric: 'accuracy'
 freeze_model: True
 # Load the model with all layers trained MLPs
 load_weights_only: True
-pretrained_mlp_load_property: True
-exit_cl: True
-num_layers: 33
+pretrained_mlp_load_property_bert: True
+testing: True
+num_layers: 30
 
 ###Model 01####
-model_checkpoint: /shared/nas2/anna19/protein/early_exit/results/model_checkpoints/esm_cl/model_epoch84.pth
-result_file: /shared/nas2/anna19/protein/early_exit/results/metrics/esm_cl_exit.csv
+model_checkpoint: /shared/nas2/anna19/protein/early_exit/results/model_checkpoints/bert_cl/model_epoch89.pth
+result_file: /shared/nas2/anna19/protein/early_exit/results/metrics/bert_cl_test.csv
